--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <script src="/bundle.js"></script>
-    <h1>I'm still working</h1>
+    <h1>I'm working</h1>
+    <button class="btn">CLICK ME</button>
   </body>
 </html>
