--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,17 @@
     <script src="/bundle.js"></script>
     <h1>I'm working</h1>
     <button class="btn">CLICK ME</button>
+      <table width="100%" border="1" id="my-table">
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Name</th>
+            <th>Surname</th>
+          </tr>
+        </thead>
+        <tbody>
+        </tbody>
+        <tr></tr>
+      </table>
   </body>
 </html>
